microservice-linkerd-demo/failing-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: order    
    version: "1.0"
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: microservice-linkerd-order:1
        imagePullPolicy: Never        
        ports:
        - containerPort: 8080
        resources: {}
status: {}
