microservice-linkerd-demo/infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apache
    version: "1.0"
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: microservice-linkerd-apache:latest        
        imagePullPolicy: Never        
        ports:
        - containerPort: 80
        resources: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgres
    version: "1.0"
  name: postgres
  annotations:
    sidecar.linkerd.io/inject: "false"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: microservice-linkerd-postgres:latest        
        imagePullPolicy: Never        
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres
        emptyDir: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: apache
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:apache.default.svc.cluster.local:80
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
